[package]
name = "pockystation-libretro"
version = "0.1.0"
authors = ["Lionel Flandrin <lionel.flandrin@gmail.com>"]

[lib]
name = "pockystation_retro"
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
time = "0.1"
rustc-serialize = "0.3"

[dependencies.log]
version = "0.4.6"
features = ["std"]

[dependencies.pockystation]
path = "pockystation"
